005-securing-with-mtls/examples/strict-pa.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: <YOUR_NAMESPACE>
spec:
  mtls:
    mode: STRICT
