005-securing-with-mtls/examples/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: $STUDENT_NS-sentences       # Gateways in same namespace must be unique
  namespace: istio-ingress          # Must be in same namespace as secret
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "$STUDENT_NS.sentences.$TRAINING_NAME.eficode.academy"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: $STUDENT_NS-sentences-tls-secret # Must be in same namespace as ingressgateway
    hosts:
    - "$STUDENT_NS.sentences.$TRAINING_NAME.eficode.academy"
