005-securing-with-mtls/examples/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sentences
spec:
  hosts:
  - "$STUDENT_NS.sentences.$TRAINING_NAME.eficode.academy"
  gateways:
  - istio-ingress/user2-sentences   # Must point to the entry point (gateway) in the istio-ingress namespace
  http:
  - route:
    - destination:
        host: sentences
